In the html I have add a class to every cardSlot div container to make it easier to style in css. In CSS I have added flex box to the player1 and player2 sections to structure the cardSlots(child elements). In JS for the time being I have selected the p1Avater to be later used for player to draw a card and I have selected p1CardSlot(s). I created an array to hold card images and images have been added to the array using a for loop. To test if the p1CardSlot(s) have been properly selected and the array having 54 card images I have appended array index 0, 25, 40 and 53(the last element) and no issues were found. Next thing to do is add an event listener, create functions and randomize a card draw.

--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
      <div id="gameBoard">
           <!-- OPPONENTS SECTION START -->
           <section id="player2">
-               <div id="p2CardSlot1"></div>
-               <div id="p2CardSlot2"></div>
-               <div id="p2CardSlot3"></div>
-               <div id="p2CardSlot4"></div>
-               <div id="p2Avatar"></div>
+               <div id="p2CardSlot1" class="cardSlot"></div>
+               <div id="p2CardSlot2" class="cardSlot"></div>
+               <div id="p2CardSlot3" class="cardSlot"></div>
+               <div id="p2CardSlot4" class="cardSlot"></div>
+               <div id="p2Avatar" class="avatar"></div>
           </section>
           <!-- OPPONENTS SECTION END -->
            <section id="attackArrows"></section>
           <!-- YOUR SECTION START -->
-
           <section id="player1">
-               <div id="p1CardSlot1"></div>
-               <div id="p1CardSlot2"></div>
-               <div id="p1CardSlot3"></div>
-               <div id="p1CardSlot4"></div>
-               <div id="p1Avatar"></div>
+               <div id="p1CardSlot1" class="cardSlot"></div>
+               <div id="p1CardSlot2" class="cardSlot"></div>
+               <div id="p1CardSlot3" class="cardSlot"></div>
+               <div id="p1CardSlot4" class="cardSlot"></div>
+               <div id="p1Avatar" class="avatar"></div>
           </section>
           <!-- YOUR SECTION END -->
 
